--- a/templates/hw1.html
+++ b/templates/hw1.html
@@ -107,7 +107,18 @@
   </script>
 
   <script type="text/javascript" src="/static/js/script_model_2.js"></script>
-
+  <script>
+    // 页面加载完成后，将滚动位置设置为 Local Storage 中存储的位置
+    document.addEventListener("DOMContentLoaded", function(event) { 
+      var scrollpos = localStorage.getItem('scrollpos');
+      if (scrollpos) window.scrollTo(0, scrollpos);
+    });
+  
+    // 当页面即将卸载时，将当前滚动位置存储到 Local Storage 中
+    window.onbeforeunload = function(e) {
+      localStorage.setItem('scrollpos', window.scrollY);
+    };
+  </script>
     
   </head>
   <body>
