develop 頁面新增連結到 editor page

--- a/templates/develop.html
+++ b/templates/develop.html
@@ -116,8 +116,17 @@
       </header>
 
       <div class="row align-items-md-stretch p-3">
-        <div class="col-md-6">
 
+        <div class="p-5 mb-4 bg-light rounded-3">
+          <div class="container-fluid py-5" Align="center">
+            <a href="/pipeline/develop/editor/hw1/submit-code">
+              <h3>Click here to Hw1 Editor Online</h3>
+            </a>
+          </div>
+        </div>
+
+
+        <div class="col-md-6">
           <div class="p-5 mb-4 bg-light rounded-3">
             <div class="container-fluid py-5">
               <label class="col-md-12 fs-2 fw-bold" Align="center">Download code templates</label>
