--- a/templates/ensemble.html
+++ b/templates/ensemble.html
@@ -133,6 +133,13 @@
     .desc:after {
       content: " ▼";
     }
+    .swal2-custom-text-align-center .swal2-content {
+      text-align: center;
+    }
+
+    .swal2-custom-text-align-left .swal2-content {
+      text-align: left;
+    }
     
   </style>
   
@@ -161,21 +168,21 @@
         </a>
       </header>
 
-      <a href="#" id="info-link">點擊顯示資訊</a>
+      <!-- <a href="#" id="info-link">點擊顯示資訊</a> -->
 
-      <script>
+      <!-- <script>
         document.getElementById("info-link").addEventListener("click", function(event) {
           event.preventDefault(); // 防止連結的預設行為
 
           Swal.fire({
             title: "資訊標題",
             // text: "model pt file: 123\nhyperparameters: \n",
-            html: '這裡是顯示的資訊內容。您可以點擊 <a href="https://example.com" target="_blank">這個連結</a> 進行查看。',
+            html: '這裡是顯示的資訊內容。您可以點擊 <a href="https://{{inputStudentId}}" target="_blank">這個連結</a> 進行查看。',
             icon: "info",
             confirmButtonText: "確定"
           });
         });
-      </script>
+      </script> -->
 
       <div class="p-5 mb-1 bg-light rounded-3">
         <div class="container-fluid py-0">
@@ -198,7 +205,7 @@
 
                 <div class="form-floating mb-3">
                   <input type="text" class="form-control" id="floatingInput" placeholder="10" name="studentId"
-                    value="110356021" required>
+                    value="{{inputStudentId}}" required>
                   <label for="floatingInput">Student ID</label>
                 </div>
 
@@ -249,11 +256,47 @@
 
                       </td>
                       <td>
-                        {{model.ptFileName}}
+                        <a href="#" id="info-link-{{model.ptFileName}}">{{model.ptFileName}}</a>
                       </td>
                       <td>{{model.dataDirectory}}</td>
                       <td>{{model.trainLoss}}</td>
                       <td>{{model.validLoss}}</td>
+
+                      <script>
+                        document.getElementById("info-link-{{model.ptFileName}}").addEventListener("click", function(event) {
+                          event.preventDefault(); // 防止連結的預設行為
+      
+                          page = `
+                          <br>
+                          您可以點擊 <a href="{{model.url}}" target="_blank">這個連結</a> 取得模型權重檔案。
+                          <br><br>
+                          dataDirectory: <b>{{model.dataDirectory}}</b>
+                          <br><br>
+                          hiddenNode: <b>{{model.hiddenNode}}</b>
+                          <br><br>
+                          weightInitialization: <b>{{model.weightInitialization}}</b>
+                          <br><br>
+                          activationFunction: <b>{{model.activationFunction}}</b>
+                          <br><br>
+                          epoch: <b>{{model.epoch}}</b>
+                          <br><br>
+                          lossFunction: <b>{{model.lossFunction}}</b>
+                          <br><br>
+                          regularizationTerm: <b>{{model.regularizationTerm}}</b>
+                          <br><br>
+                          optimizer: <b>{{model.optimizer}}</b>
+                          <br><br>
+                          learningRateDecayScheduler: <b>{{model.learningRateDecayScheduler}}</b>
+                          `;
+                  
+                          Swal.fire({
+                            title: "模型",
+                            html: page,
+                            icon: "info",
+                            confirmButtonText: "確定",
+                          });
+                        });
+                      </script>
 
                     </tr>
                     {% endfor %}
@@ -349,6 +392,10 @@
         © 2022
       </footer>
     </div>
+
+
+
+
   </main>
 
 
