--- a/templates/hw1.html
+++ b/templates/hw1.html
@@ -127,21 +127,23 @@
     .progressbar li:before {
       content: counter(step);
       counter-increment: step;
-      width: 30px;
-      height: 30px;
+      width: 60px;
+      height: 60px;
       border: 2px solid #000;
       display: block;
       text-align: center;
       margin: 0 auto 10px auto;
       border-radius: 50%;
       background-color: #fff;
+      line-height: 60px;
+      font-size: 30px;
     }
 
     .progressbar li:after {
       content: '';
       position: absolute;
       width: 100%;
-      height: 2px;
+      height: 4px;
       background-color: #000;
       top: 15px;
       left: -50%;
@@ -178,26 +180,6 @@
     };
   </script>
 
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      var spanValue = document.getElementById("stepN").innerHTML;
-      console.log(spanValue)
-      var steps = document.getElementsByClassName("step");
-
-      if (spanValue === "step2") {
-        // 如果 span 的值等于 "step2"，执行这里的代码
-        console.log("这是第二步");
-        for (var i = 0; i < steps.length - 1; i++) {
-          steps[i].style.display = "none";
-        }
-        steps[2].style.display = "block";
-        markAsDone('step0');
-        markAsDone('step1');
-      }
-    });
-
-  </script>
-
 </head>
 
 <body>
@@ -231,9 +213,9 @@
 
           <div class="container">
             <ul class="progressbar">
-              <li id="step0">Data Preparation</li>
-              <li id="step1">Model Training</li>
-              <li id="step2">Model Performance</li>
+              <li id="step0"><label class="col-md-8 fs-4 fw-bold">Data Preparation</label></li>
+              <li id="step1"><label class="col-md-8 fs-4 fw-bold">Model Training</label></li>
+              <li id="step2"><label class="col-md-8 fs-4 fw-bold">Model Performance</label></li>
             </ul>
           </div>
 
@@ -254,10 +236,14 @@
                         so that it is suitable for further processing and analysis.
                       </p>
 
-                      <div class="mb-1" Align="center">
+                      <p class="col-md-12 fs-6">You can upload your own dataset in this url: <a href="http://140.119.19.87/pipeline/data">http://140.119.19.87/pipeline/data</a>
+                      or utilize the default dataset listed below.
+                      </p>
+
+                      <!-- <div class="mb-1" Align="center">
                         <button class="btn btn-primary btn-lg" type="button"
                           onclick="window.location.href='/pipeline/data';">Try it!</button>
-                      </div>
+                      </div> -->
 
                       <br><br>
 
@@ -266,6 +252,7 @@
                         number, location data, or via factors specific to the person’s physical,
                         physiological, genetic, mental, economic, cultural or social identity.
                       </p>
+                      
                       <div class="form-floating mb-3">
                         <select class="form-select" id="select_data" placeholder="10" name="dataDirectory" method="GET"
                           style="font-size:15px;">
@@ -284,8 +271,12 @@
                 </div>
                 <br>
 
+                <div class="mb-1" Align="center">
+                  <button type="button" onclick="nextStep(1);markAsDone('step1');"
+                    class="btn btn-outline-primary btn-lg">Next</button>
+                </div>
 
-                <button type="button" onclick="nextStep(1);markAsDone('step0');">Next</button>
+
 
               </div>
 
@@ -466,7 +457,7 @@
                 <br>
 
                 <div class="mb-1" Align="center">
-                  <label for="model_training" class="btn btn-outline-primary btn-lg">Train</label>
+                  <label for="model_training" class="btn btn-outline-primary btn-lg">Next</label>
                   <input type="submit" id="model_training" class="btn btn-outline-primary btn-lg"
                     formaction="/pipeline/model/hw1" onclick="checkFields(event);" hidden>
                 </div>
@@ -546,8 +537,18 @@
                   </div>
                 </div>
 
-                <text>After training completed, this model & metadata would save automatically</text>
-                <button type="button" onclick="markAsDone('step2');">Next</button>
+                <!-- <text>After training completed, this model & metadata would save automatically</text> -->
+                <br>
+                <!-- <div class="mb-1" Align="center">
+                  <button type="button" onclick="showEnsemble();"
+                    class="btn btn-outline-primary btn-lg">Next</button>
+                </div> -->
+
+                <div class="mb-1" Align="center" id="ensemble">
+                  <label class="btn btn-outline-primary btn-lg"
+                    onclick="window.location.href='/pipeline/model/hw1/ensemble/';">Ensemble modeling</label>
+                </div>
+
 
               </div>
 
@@ -558,14 +559,11 @@
 
       </div>
 
-      <span id="stepN">{{step2}}</span>
+      <span id="stepN" hidden>{{step2}}</span>
 
       <br>
 
-      <div class="mb-1" Align="center">
-        <label class="btn btn-outline-primary btn-lg"
-          onclick="window.location.href='/pipeline/model/hw1/ensemble/';">Ensemble modeling</label>
-      </div>
+
 
 
     </div>
@@ -601,6 +599,35 @@
     function markAsDone(step) {
       document.getElementById(step).classList.add('active');
     }
+  </script>
+
+  <!-- <script>
+    function showEnsemble() {
+      document.getElementById("ensemble").style.display = "block";
+    }
+  </script> -->
+
+
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      markAsDone('step0');
+      var spanValue = document.getElementById("stepN").innerHTML;
+      console.log(spanValue)
+      var steps = document.getElementsByClassName("step");
+
+      if (spanValue === "step2") {
+        // 如果 span 的值等于 "step2"，执行这里的代码
+        console.log("这是第二步");
+        for (var i = 0; i < steps.length - 1; i++) {
+          steps[i].style.display = "none";
+        }
+        steps[2].style.display = "block";
+        markAsDone('step0');
+        markAsDone('step1');
+        markAsDone('step2');
+      }
+    });
+
   </script>
 
 
