--- a/templates/develop.html
+++ b/templates/develop.html
@@ -119,8 +119,9 @@
 
         <div class="p-5 mb-4 bg-light rounded-3">
           <div class="container-fluid py-5" Align="center">
-            <a href="/pipeline/develop/editor/hw1/submit-code">
-              <h3>Click here to Hw1 Editor Online</h3>
+            <label class="col-md-12 fs-2 fw-bold" Align="center">Click here to Hw1 Online Editor</label>
+              <button class="btn btn-primary btn-lg" type="button"
+                  onclick="window.location.href='/pipeline/develop/editor/hw1/submit-code';">Hw1-Editor</button>
             </a>
           </div>
         </div>
